--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@ import DarkModeToggle from "./DarkModeToggle.astro";
 ---
 
 <header>
-  <a 
-    class="unset absolute z-10 left-[50%] -top-[100rem] translate-x-[-50%] bg-white text-black px-8 py-2 focus:top-[initial]" 
+  <a
+    class="unset absolute z-10 left-[50%] -top-[100rem] translate-x-[-50%] bg-white text-black px-8 py-2 focus:top-[initial]"
     href="#main"
   >
     Skip to content
@@ -13,15 +13,13 @@ import DarkModeToggle from "./DarkModeToggle.astro";
   <nav>
     <section class="text-text-bold">
       <ul class="unset flex gap-4 [&>li]:p-0">
-        <li><HeaderLink href="/">Home</HeaderLink></li>
+        <li><HeaderLink href="/">About me</HeaderLink></li>
         <li><HeaderLink href="/blog">Blog</HeaderLink></li>
         <li><HeaderLink href="/projects">Projects</HeaderLink></li>
       </ul>
     </section>
   </nav>
-  <div
-    class="justify-self-end flex items-center content-center text-text-bold"
-  >
+  <div class="justify-self-end flex items-center content-center text-text-bold">
     <DarkModeToggle />
   </div>
 </header>
