--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,14 @@
 import PageMeta from "../components/PageMeta.astro";
 import PageLayout from "../layouts/PageLayout.astro";
 import Intro from "../components/Intro.astro";
-import AboutTheTheme from "../components/AboutTheTheme.astro";
 import { SITE_TITLE } from "../config";
+import AboutMe from "src/components/AboutMe.astro";
 ---
 
 <PageLayout>
-  <PageMeta title={`${SITE_TITLE} | Web Ninja`} slot="meta" />
+  <PageMeta title={`${SITE_TITLE}`} slot="meta" />
   <Fragment slot="main">
     <Intro />
-    <AboutTheTheme />
+    <AboutMe />
   </Fragment>
 </PageLayout>
