add target blank to twitter and github

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -23,6 +23,7 @@
       <a
         class="unset ml-4 hover:text-text-link"
         href="https://github.com/erklyn"
+        target="_blank"
       >
         <i
           class="fa-brands fa-github"
@@ -33,12 +34,13 @@
       <a
         class="unset ml-4 hover:text-text-link"
         href="https://twitter.com/utkuenes"
-        aria-label="Dinesh on Twitter"
+        aria-label="UtkuEnes on Twitter"
+        target="_blank"
       >
         <i
           class="fa-brands fa-twitter"
           aria-hidden="true"
-          title="Dinesh on Twitter"></i>
+          title="UtkuEnes on Twitter"></i>
         <span>Twitter</span>
       </a>
     </div>
