github title update

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -28,7 +28,7 @@
         <i
           class="fa-brands fa-github"
           aria-hidden="true"
-          title="Blogster on GitHub"></i>
+          title="Erklyn on GitHub"></i>
         <span>GitHub</span>
       </a>
       <a
