add fiverr link

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -33,6 +33,16 @@
       </a>
       <a
         class="unset ml-4 hover:text-text-link"
+        href="http://www.fiverr.com/s/R54EP8"
+        target="_blank"
+      >
+        <i
+          aria-hidden="true"
+          title="Fiverr link"></i>
+        <span>Hire me for a project</span>
+      </a>
+      <a
+        class="unset ml-4 hover:text-text-link"
         href="https://twitter.com/utkuenes"
         aria-label="UtkuEnes on Twitter"
         target="_blank"
@@ -44,7 +54,6 @@
         <span>Twitter</span>
       </a>
     </div>
-    <!-- <p class="text-2xl pb-4">Web Developer. OSS Wizard. Blogger.</p> -->
     <p class="text-center text-lg pt-2">
       Hi, you can take a look at my projects and my mid takes on sofware/tools
       that I use daily.
