--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -17,10 +17,10 @@
     >
     </div>
     <h2 class="text-center text-lg m-2 p-2">Full Stack Software Developer</h2>
-    <p>I love everything about computers, from the silicon in a processor to UI we interact with on a daily basis a terminal window or a web browser
-    , although lower the level more interesting it is for me except Assembly!
+    <p>I love everything about computers,
+    from the silicon in a processor to UI we interact with on a daily basis, a terminal window or a web browser!
     I do believe I am a Full Stack Developer,
-    I can work on Ops side of the things, I can build CLI/TUI applications, I can build web servers and web uis...
+    I can work on Ops side of the things, I can build CLI/TUI applications, I can build web servers and web UIs...
     </p>
     <ul>
       <li>
